<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evindroid</string>
    <string name="action_settings">Settings</string>
    <string name="ListaUcenika">Lista Ucenika</string>
    <string-array name="Stavke">
        <item >Stavka1</item>
        <item >Stavka2</item>
    </string-array>
        <string name="desc_foto_ucenik">foto ucenik</string>
        <string name="ime">Ime</string>
        <string name="prezime">Prezime</string>
        <string name="jmbg">JMBG</string>
        <string name="broj_mk">Broj u MK</string>
        <string name="sacuvaj">Sačuvaj</string>
        <string name="modify_ucenik_data">Izmena podataka</string>
        <string name="delete_ucenik">Ukloni ucenika</string>
        <string name="da_li_ste_sigurni">Da li ste sigurni?</string>
        <string name="da">Da</string>
        <string name="ne">Ne</string>
        <string name="dodaj">Dodaj</string>
        <string name="show_ucenik">Prikazi podatke</string>
        <string name="show_ocene">Ocene</string>
        <string name="show_izostanci">Izostanci</string>
        <string name="listaPredmeta">Lista predmeta</string>
        <string name="naziv_predmeta">Naziv</string>
        <string name="id_predmeta">ID</string>
        <string name="sacuvaj_predmet">Sacuvaj</string>
        <string name="modify_predmet">Promeni podatke predmeta</string>
        <string name="delete_predmet">Ukloni predmet</string>
        <string name="txt_neopravdani">Neopravdani</string>
        <string name="txt_opravdani">Opravdani</string>
        <string name="prikazi_prosek">Prikaži prosek</string>
        <string name="ukupno_izostanaka">Ukupno izostanaka</string>
        <string name="prikazi_izostanke">Prikaži izostanke</string>
        <string name="str_default">Default</string>
        <string name="izostanci_modify">Promeni podatke</string>
        <string name="izostanci_delete">Obriši podatak</string>
        <string name="primer_ocenjicanja">Primer unosa ocena: 2 5 4</string>

</resources>
