<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_ocenjivanje"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ucenik_info"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/txt_ucenik_info_ocene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_ocenjivanje"
        android:layout_width="match_parent"
        android:layout_height="341dp" >

    </ListView>

    <TextView
        android:id="@+id/txt_example_ocenjivanje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/primer_ocenjicanja"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_sacuvaj_ocene"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sacuvaj"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_prikazi_prosek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prikazi_prosek" />

    </LinearLayout>

</LinearLayout>
