<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_ucenik_info"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/txt_izostanci_jmbg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jmbg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />

    </LinearLayout>

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:id="@+id/txtOpravdani"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingRight="15dp"
            android:text="@string/txt_opravdani" />

        <EditText
            android:id="@+id/edtOpravdani"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text|number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:id="@+id/txt_datum_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingRight="15dp"
            android:text="@string/txt_neopravdani" />

        <EditText
            android:id="@+id/edtNeopravdani"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text|number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sacuvaj_izostanci"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/sacuvaj" />

        <Button
            android:id="@+id/btn_izostanci_ukupno"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:lines="2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ukupno_izostanaka" />

        <Button
            android:id="@+id/btn_prikaz_izostanaka"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:lines="2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/prikazi_izostanke" />

    </LinearLayout>

</LinearLayout>
